Initial clean push

--- a/report.html
+++ b/report.html
@@ -2,7 +2,7 @@
   <head>
     <script src="xbps-min-0.8.js"></script>
     <script src="libs/orbitcam.js"></script>
-    <script src="example.js"></script>
+    <script src="visualiser.js"></script>
     <title>Intern Report</title>
   </head>
   <body onLoad="fillCanvases()" style="font-family:helvetica;font-size:10pt">
